tests/bad/frontend/inheritenceError.latte
int main() {return 0;}

class C extends D {}